--- a/診断機能の組込み.html
+++ b/診断機能の組込み.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name= "twitter:card" content="summary">
-  <meta property= "og:url" content="https://あなたのユーザ名.github.io/assessment/assessment.html">
+  <meta property= "og:url" content="https://kkkkyo-iii.github.io/assessment/assessment.html">
   <meta property= "og:title" content="あなたのいいところ診断">
-  <meta property= "og:discirption" content="あなたのいいところ診断">
+  <meta property= "og:discirption" content="あなたのいいところ診断"content="ZEN Study Web アプリケーション開発コースで制作した、「あなたのいいところ診断」サイトです。">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="診断機能の組込み.css">
   <title>診断テスト改</title>
