--- a/診断機能の組込み.html
+++ b/診断機能の組込み.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name= "twitter:card" content="summary">
-  <meta property= "og:url" content="https://kkkkyo-iii.github.io/assessment/assessment.html">
+  <meta property= "og:url" content="https://kkkkyo-iii.github.io/assessment/診断機能の組込み.html">
   <meta property= "og:title" content="あなたのいいところ診断">
   <meta property= "og:discirption" content="あなたのいいところ診断"content="ZEN Study Web アプリケーション開発コースで制作した、「あなたのいいところ診断」サイトです。">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
